# graphviz

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  DEVELOPERS.md  Doxyfile.in  config-cmake.h.in  configure.ac
ci/: clang_format.py  macos-install-build-dependencies.sh  macos-install-runtime-dependencies.sh  mingw-install.sh  tests.py
ci/fedora38/: Dockerfile
ci/ubuntu-20.04/: Dockerfile
ci/ubuntu-22.04/: Dockerfile
ci/ubuntu-22.10/: Dockerfile
ci/ubuntu-23.04/: Dockerfile
cmake/: FindGS.cmake  config_checks.cmake
cmd/gvedit/: main.cpp  mainwindow.cpp  mainwindow.h
cmd/mingle/: minglemain.cpp
cmd/smyrna/: draw.c  smyrna_utils.c  smyrnadefs.h
cmd/tools/: CMakeLists.txt  Makefile.am  gmlparse.c  gmlparse.h  gmlscan.c  gvgen.c
contrib/: Makefile.am
doc/libgraph/: Agraph.tex
lib/cdt/: CMakeLists.txt  cdt.h
lib/cgraph/: CMakeLists.txt  alloc.h  attr.c  cgraph.3  cgraph.h  grammar.c  grammar.h  scan.c
lib/circogen/: blockpath.c  blocktree.c  circpos.c  nodelist.c  nodelist.h
lib/common/: CMakeLists.txt  arrows.c  emit.c  geomprocs.h  htmlparse.c  htmlparse.h  htmlparse.y  (+12 more)
plugin/: CMakeLists.txt
plugin/vt100/: CMakeLists.txt  gvplugin_vt100.c
redhat/: graphviz.spec.fedora.in
tests/: CMakeLists.txt  edgepath_test.txt  gradient_test.txt  graphviz_edge.cpp  gvtest.py  imagepath_test.txt  rtest.py  svg_element.cpp  svg_element.h  test_edge_node_overlap_all_edge_arrows.cpp  test_edge_node_overlap_curve_and_icurve_edge_arrows.cpp  test_edge_node_overlap_utilities.cpp  test_examples.py  test_regression.py  test_rtest.py  tests.txt
(+128 files in other folders)
